# Parallel-Programming

./: .gitignore
lab1/: fork.py  main.py  philosopher.py  run.sh  tag.py
lab2/: Cargo.toml  measurements.xlsx
lab2/src/: board.rs  main.rs
lab2/src/board/: board.rs  mod.rs  token.rs
lab2/src/node/: node.rs
lab2/src/process/: assignment.rs  master.rs  mod.rs  tag.rs  task.rs  worker.rs
lab3/: Cargo.toml
lab3/benchmarks/average-distance/: average-distance.md
lab3/benchmarks/cfd/: cfd-sequential-parallel.md
lab3/benchmarks/pi/: pi-l.md  pi-m.md  pi-sequential-parallel.md
